--- a/Areas/Management/Views/Shared/_AdminDashboard.cshtml
+++ b/Areas/Management/Views/Shared/_AdminDashboard.cshtml
@@ -231,131 +231,46 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a asp-area="Employees" asp-controller="ModuleSetUp" asp-action="Index" class="nav-link">
+                                    <a asp-area="Management" asp-controller="PreModule" asp-action="PreSelect" class="nav-link">
                                         <i class="fas fa-angle-double-right"></i>
                                         <p>
                                             Pre Module SetUp
                                         </p>
                                     </a>
+
+
                                 </li>
-                                
-                                    <li class="nav-item">
-                                        <a asp-area="Management" asp-controller="Premodule" asp-action="UnitIndex" class="nav-link">
-                                            <i class="fas fa-angle-double-right"></i>
-                                            <p>
-                                                Units
-                                            </p>
-                                        </a>
-                                    </li>
-                                    
-                                        <li class="nav-item">
-                                            <a asp-area="Management" asp-controller="Premodule" asp-action="SupplierCreate" class="nav-link">
-                                                <i class="fas fa-angle-double-right"></i>
-                                                <p>
-                                                    Supplier
-                                                </p>
-                                            </a>
-                                        </li>
-                                        
-                                            <li class="nav-item">
-                                                <a asp-area="" asp-controller="" asp-action="" class="nav-link">
-                                                    <i class="fas fa-angle-double-right"></i>
-                                                    <p>
-                                                        Product
-                                                    </p>
-                                                </a>
-                                            </li>
-                                            @*<li class="nav-item">
-                <a asp-area="Employees" asp-controller="Companies" asp-action="Index" class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Company
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="Employees" asp-controller="Departments" asp-action="Index" class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Department
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="Employees" asp-controller="Sections" asp-action="Index" class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Section
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="Store" asp-controller="Inventorys" asp-action="OtherRequest" class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Floor
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="Store" asp-controller="Inventorys" asp-action="OtherRequest" class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Designation
-                    </p>
-                </a>
-            </li>*@
 
-                                            @*<li class="nav-item">
-                <a class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Shift
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="Store" asp-controller="Inventorys" asp-action="OtherRequest" class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Leave
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="Store" asp-controller="Inventorys" asp-action="OtherRequest" class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Loan
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="Store" asp-controller="Inventorys" asp-action="OtherRequest" class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Adjust
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="Store" asp-controller="Inventorys" asp-action="OtherRequest" class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Holiday
-                    </p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a asp-area="Store" asp-controller="Inventorys" asp-action="OtherRequest" class="nav-link">
-                    <i class="fas fa-angle-double-right"></i>
-                    <p>
-                        Salary
-                    </p>
-                </a>
-            </li>*@
+                                <li class="nav-item">
+                                    <a asp-area="" asp-controller="" asp-action="" class="nav-link">
+                                        <i class="fas fa-angle-double-right"></i>
+                                        <p>
+                                            Inventory
+                                        </p>
+                                    </a>
+                                </li>
 
-                                        </ul>
+                                <li class="nav-item">
+                                    <a asp-area="" asp-controller="" asp-action="" class="nav-link">
+                                        <i class="fas fa-angle-double-right"></i>
+                                        <p>
+                                            Inventory Out
+                                        </p>
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a asp-area="" asp-controller="" asp-action="" class="nav-link">
+                                        <i class="fas fa-angle-double-right"></i>
+                                        <p>
+                                            Product
+                                        </p>
+                                    </a>
+                                </li>
+                                @*<li class="nav-item">
+            
+
+                            </ul>
 </li>
 
 
