--- a/Areas/Management/Views/PreModule/UnitIndex.cshtml
+++ b/Areas/Management/Views/PreModule/UnitIndex.cshtml
@@ -19,7 +19,7 @@
                 <table id="example1" class="table table-bordered table-striped">
                     <thead>
                         <tr>
-                            <th>Unit Id</th>
+
                             <th>Unit Name</th>
 
                         </tr>
@@ -28,10 +28,22 @@
                         @foreach (var items in Model)
                         {
                             <tr>
-                                <td>@items.UnitID</td>
+
                                 <td>
                                     @items.UnitName
                                 </td>
+
+                                <td>
+                                    <a asp-action="EditUnit" asp-route-id="@items.UnitID">Edit</a>
+                                </td>
+
+                                <td>
+                                    <button class="btn btn-link stitchdetails" type="button"
+                                            data-assigned-id="@items.UnitID" data-text="@items.UnitName">
+                                        Delete
+                                    </button>
+                                </td>
+
 
                             </tr>
                         }
@@ -39,7 +51,7 @@
                     </tbody>
                     <tfoot>
                         <tr>
-                            <th>Unit Id</th>
+
                             <th>Unit Name</th>
                         </tr>
                     </tfoot>
@@ -50,43 +62,69 @@
 
 
 
-        <script src="~/assets/plugins/jquery/jquery.min.js"></script>
-        <!-- Bootstrap 4 -->
-        <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <!-- DataTables  & Plugins -->
-        <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
-        <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-        <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-        <script src="~/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-        <script src="~/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
-        <script src="~/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
-        <script src="~/assets/plugins/jszip/jszip.min.js"></script>
-        <script src="~/assets/plugins/pdfmake/pdfmake.min.js"></script>
-        <script src="~/assets/plugins/pdfmake/vfs_fonts.js"></script>
-        <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
-        <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
-        <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
-        <!-- AdminLTE App -->
-        <script src="~/assets/dist/js/adminlte.min.js"></script>
-        <!-- AdminLTE for demo purposes -->
-      
-        <!-- Page specific script -->
-        <script>
-  $(function () {
-    $("#example1").DataTable({
-      "responsive": true, "lengthChange": false, "autoWidth": false,
-      "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
-    }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-    $('#example2').DataTable({
-      "paging": true,
-      "lengthChange": false,
-      "searching": false,
-      "ordering": true,
-      "info": true,
-      "autoWidth": false,
-      "responsive": true,
-    });
-  });
-        </script>
+
+
+
+        @section Scripts {
+            <script src="~/assets/plugins/jquery/jquery.min.js"></script>
+            <!-- Bootstrap 4 -->
+            <script src="~/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+            <!-- DataTables  & Plugins -->
+            <script src="~/assets/plugins/datatables/jquery.dataTables.min.js"></script>
+            <script src="~/assets/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+            <script src="~/assets/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+            <script src="~/assets/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+            <script src="~/assets/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+            <script src="~/assets/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+            <script src="~/assets/plugins/jszip/jszip.min.js"></script>
+            <script src="~/assets/plugins/pdfmake/pdfmake.min.js"></script>
+            <script src="~/assets/plugins/pdfmake/vfs_fonts.js"></script>
+            <script src="~/assets/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+            <script src="~/assets/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+            <script src="~/assets/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+            <!-- AdminLTE App -->
+            <script src="~/assets/dist/js/adminlte.min.js"></script>
+            <!-- AdminLTE for demo purposes -->
+            <!-- Page specific script -->
+            <script>
+        $(function () {
+            $('.stitchdetails').click(function () {
+                var Styleid = $(this).data('assigned-id');
+                var Stylename = $(this).data('text');
+                if (confirm("Are you Sure to Delete " + Stylename +" ?")) {
+                    $(this).closest("tr").remove();
+                    $.getJSON('@Url.Action("DeleteUnit")', { id: Styleid }, function (subheads) {
+                        if (subheads == 1 ) {
+                            alert("Successfull");
+                        };
+                    });
+                } else {
+
+
+                }
+                //alert("Are you Sure to Delete " + Stylename + Styleid +" ?")
+                console.log("sss", Styleid);
+            });
+
+        });
+            </script>
+            <script>
+                $(function () {
+                    $("#example1").DataTable({
+                        "responsive": true, "lengthChange": false, "autoWidth": false,
+                        "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+                    }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+                    $('#example2').DataTable({
+                        "paging": true,
+                        "lengthChange": false,
+                        "searching": false,
+                        "ordering": true,
+                        "info": true,
+                        "autoWidth": false,
+                        "responsive": true,
+                    });
+                });
+            </script>
+        }
     </body>
     </html>
