--- a/Areas/Management/Views/Shared/_AdminDashboard.cshtml
+++ b/Areas/Management/Views/Shared/_AdminDashboard.cshtml
@@ -238,11 +238,10 @@
                                         </p>
                                     </a>
 
-
                                 </li>
 
                                 <li class="nav-item">
-                                    <a asp-area="" asp-controller="" asp-action="" class="nav-link">
+                                    <a asp-area="Management" asp-controller="Inventory" asp-action="InventoryIndex" class="nav-link">
                                         <i class="fas fa-angle-double-right"></i>
                                         <p>
                                             Inventory
