--- a/Areas/Management/Views/PreModule/PreSelect.cshtml
+++ b/Areas/Management/Views/PreModule/PreSelect.cshtml
@@ -7,41 +7,51 @@
 <hr />
 
 
+
 <div class="row">
     <div class="col-sm-4">
         <div class="card" style="width: 18rem;">
             <div class="card-body">
-                <h5 class="card-title">Units</h5>
+                <h5 class="card-title">Units</h5><br />
                 <a class="btn btn-primary" asp-area="Management" asp-controller="PreModule" asp-action="UnitIndex">Go</a>
             </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Suppliers</h5>
-                    <a class="btn btn-primary" asp-area="Management" asp-controller="PreModule" asp-action="SupplierIndex">Go</a>
-                </div>
+    <div class="col-sm-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Suppliers</h5><br />
+                <a class="btn btn-primary" asp-area="Management" asp-controller="PreModule" asp-action="SupplierIndex">Go</a>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Cost-type</h5>
-                        <a class="btn btn-primary" asp-area="Management" asp-controller="PreModule" asp-action="CosttypeIndex">Go</a>
-                    </div>
-                </div>
+    </div>
+
+    <div class="col-sm-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Cost-type</h5><br />
+                <a class="btn btn-primary" asp-area="Management" asp-controller="PreModule" asp-action="CosttypeIndex">Go</a>
             </div>
+        </div>
+    </div>
+
+    <div class="col-sm-4">
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Workers</h5><br />
+                <a class="btn btn-primary" asp-area="Management" asp-controller="PreModule" asp-action="WorkerIndex">Go</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
 
-            <br />
-            <br />
-            <br />
+<br />
+<br />
+<br />
 
-            <a class="btn btn-primary" asp-area="" asp-controller="Home" asp-action="Index">Return Home Screen</a>
+<a class="btn btn-primary" asp-area="" asp-controller="Home" asp-action="Index">Return Home Screen</a>
 
