--- a/Areas/Management/Views/PreModule/WorkerIndex.cshtml
+++ b/Areas/Management/Views/PreModule/WorkerIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PurityERP.Areas.Management.Models.Costtype>
+﻿@model IEnumerable<PurityERP.Areas.Management.Models.Worker>
 
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -12,15 +12,18 @@
 
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title">Exitst Costs</h3>
+            <h3 class="card-title">Exitst Workers</h3>
         </div>
-        <a asp-action="CostType" class=" btn btn-primary float-right">Create New</a>
+        <a asp-action="Worker" class=" btn btn-primary float-right">Create New</a>
         <!-- /.card-header -->
         <div class="card-body">
             <table id="example1" class="table table-bordered table-striped">
                 <thead>
                     <tr>
-                        <th>Cost Tittle</th>
+
+                        <th>Name</th>
+                        <th>Phone Number</th>
+                        <th>NID</th>
 
                     </tr>
                 </thead>
@@ -28,13 +31,20 @@
                     @foreach (var items in Model)
                     {
                         <tr>
-                            <td>@items.Costtittle</td>
+
+
+
+                            <td>@items.WorkerName</td>
+                            <td>@items.WorkerPhno</td>
+                            <td>@items.WorkerNid</td>
+
                             <td>
                                 <button class="btn btn-link stitchdetails" type="button"
-                                        data-assigned-id="@items.CostId" data-text="@items.Costtittle">
+                                        data-assigned-id="@items.WorkerId" data-text="@items.WorkerName">
                                     Delete
                                 </button>
                             </td>
+
                         </tr>
 
                     }
@@ -43,9 +53,12 @@
                 <tfoot>
                     <tr>
 
-                        <th>Cost Tittle</th>
+                        <th>Name</th>
+                        <th>Phone Number</th>
+                        <th>NID</th>
 
                     </tr>
+
                 </tfoot>
             </table>
         </div>
@@ -81,7 +94,7 @@
                 var Stylename = $(this).data('text');
                 if (confirm("Are you Sure to Delete " + Stylename +" ?")) {
                     $(this).closest("tr").remove();
-                    $.getJSON('@Url.Action("DeleteCost")', { id: Styleid }, function (subheads) {
+                    $.getJSON('@Url.Action("DeleteWorker")', { id: Styleid }, function (subheads) {
                         if (subheads == 1 ) {
                             alert("Successfull");
                         };
